# lorax

./: .gitignore  CMakeLists.txt  README.md  SequentialIDGenerator.h  Users:faizandarsot:eatclusi.textClipping  db.sqlite3  gui.cpp  logfile  main.cpp  makefile  manage.py  requirements.txt  sequentialIDGenerator.cpp  test.py
env/: pyvenv.cfg
esp-testing/: platformio.ini
esp-testing/src/: main.cpp
esp32app/: models.py
esp32app/migrations/: 0001_initial.py
hardware/: machine-api.go
lorax/: asgi.py  settings.py  urls.py  wsgi.py
myapp/: admin.py  models.py
myapp/migrations/: 0001_initial.py
myappmotor/: apps.py  models.py  mqtt_client.py  serializers.py  urls.py  views.py
myappmotor/migrations/: 0001_initial.py
myappmotor/templates/: button_page.html  motor_plot.html
myenv/: pyvenv.cfg
orderqueue/: apps.py  controller_interface.py  customer.py  fifo_queue.py  models.py  pamf_machine.py  pamf_machine_manager.py  prep_stage.py  sending_data_interface.py  test_controller.py  test_full_func.py  urls.py  utils.py  views.py
orderqueue/migrations/: 0001_initial.py
simple_dashboard/: fifo_queue.py  main.py  pamf_machine_manager.py  prep_stage.py
stages/: Constructor.cpp  alltogether.go
tcp-client/: client.go
tcp-server/: server.go
